--- a/E-Cell-Website/esummit.html
+++ b/E-Cell-Website/esummit.html
@@ -75,17 +75,25 @@
                 </div>
             </div>
             <div class="hero-cta">
-                <button class="cta-primary">
-                    <span>Register Now</span>
-                    <svg class="cta-arrow" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M4 10H16M16 10L10 4M16 10L10 16" stroke="currentColor" stroke-width="2"
-                            stroke-linecap="round" />
-                    </svg>
-                </button>
-                <button class="cta-secondary">
-                    <span>View Schedule</span>
-                </button>
+                <a href="https://unstop.com/college-fests/e-summit-igdtuw-e-cell-igdtuw-432474" target="_blank"
+                    rel="noopener noreferrer">
+                    <button class="cta-primary">
+                        <span>Register Now</span>
+                        <svg class="cta-arrow" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                            <path d="M4 10H16M16 10L10 4M16 10L10 16" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" />
+                        </svg>
+                    </button>
+                </a>
+
+                <a href="https://unstop.com/college-fests/e-summit-igdtuw-e-cell-igdtuw-432474" target="_blank"
+                    rel="noopener noreferrer">
+                    <button class="cta-secondary">
+                        <span>View Schedule</span>
+                    </button>
+                </a>
             </div>
+
         </div>
 
         <div class="portal">
@@ -259,8 +267,9 @@
                 and creativity—while preparing you for the fast-evolving tech landscape.
             </p>
         </div>
-        
-        <div class="comp-container grid grid-cols-1 md:grid-cols-2 place-items-center gap-8 mt-12 flex justify-center gap-10 items-stretch">
+
+        <div
+            class="comp-container grid grid-cols-1 md:grid-cols-2 place-items-center gap-8 mt-12 flex justify-center gap-10 items-stretch">
             <a href="https://unstop.com/competitions/start-a-thon-a-two-stage-startup-pitching-competition-e-summit-igdtuw-e-cell-igdtuw-1621490?utm_source=ig&utm_medium=social&utm_content=link_in_bio"
                 target="_blank" rel="noopener noreferrer" class="comp-card-link">
 
