--- a/E-Cell-Website/index.html
+++ b/E-Cell-Website/index.html
@@ -513,50 +513,83 @@
   </footer>
   </div>
 
-  <!-- eSummit Popup -->
-  <div id="esummitPopup" class="fixed inset-0 z-[9999] hidden items-center justify-center bg-black/70 backdrop-blur-md">
+    <!-- eSummit Popup Markup -->
+    <div id="popupOverlay" class="fixed inset-0 z-[9999] hidden items-center justify-center p-4">
+        <!-- Backdrop -->
+        <div id="popupBackdrop"
+            class="absolute inset-0 bg-black/85 backdrop-blur-xl opacity-0 transition-opacity duration-500"></div>
 
-    <!-- Floating Glow -->
-    <div class="absolute w-[500px] h-[500px] bg-purple-600/20 blur-[120px] rounded-full animate-bounce-slow"></div>
+        <!-- Floating Glow -->
+        <div
+            class="absolute w-[280px] sm:w-[600px] h-[280px] sm:h-[600px] bg-purple-600/15 blur-[120px] rounded-full animate-bounce-slow pointer-events-none">
+        </div>
 
-    <div id="popupCard" class="relative bg-gradient-to-br from-black via-gray-900 to-purple-950 
-                text-white max-w-md w-[90%] p-8 rounded-3xl 
-                shadow-[0_0_80px_rgba(168,85,247,0.25)] 
-                border border-white/10 overflow-hidden">
+        <!-- Popup Card -->
+        <div id="popupCard"
+            class="relative bg-gradient-to-br from-[#0a0a0a]/90 via-[#111]/90 to-[#1a0b2e]/90 
+                    backdrop-blur-2xl text-white max-w-lg w-full p-6 sm:p-10 rounded-[2.5rem] 
+                    shadow-[0_0_80px_rgba(168,85,247,0.2),inset_0_0_20px_rgba(255,255,255,0.05)] 
+                    border border-white/20 overflow-hidden transform scale-90 opacity-0 transition-all duration-700 ease-[cubic-bezier(0.16,1,0.3,1)]">
 
-      <!-- Accent line -->
-      <div class="absolute top-0 left-0 w-full h-[2px] bg-gradient-to-r from-pink-500 to-purple-500"></div>
+            <!-- Glossy Shine -->
+            <div
+                class="absolute inset-0 bg-gradient-to-r from-transparent via-white/[0.05] to-transparent skew-x-[-25deg] animate-shine pointer-events-none z-0">
+            </div>
 
-      <!-- Close -->
-      <button id="closePopup" class="absolute top-4 right-4 text-gray-400 hover:text-white text-2xl transition">
-        ×
-      </button>
+            <!-- Top Line -->
+            <div
+                class="absolute top-0 left-0 w-full h-[4px] bg-gradient-to-r from-pink-500 via-purple-500 to-indigo-500 opacity-80">
+            </div>
 
-      <!-- Popup Content -->
-      <p class="popup-sub text-xs uppercase tracking-[0.35em] text-purple-400 mb-3">
-        E-Cell IGDTUW presents
-      </p>
+            <!-- Close Button -->
+            <button id="closePopupBtn"
+                class="absolute top-4 right-4 text-gray-500 text-3xl font-light w-10 h-10 flex items-center justify-center rounded-full z-20 transition-all hover:scale-110 hover:text-white hover:bg-white/10">
+                &times;
+            </button>
 
-      <h2 class="popup-title text-4xl font-extrabold mb-4 leading-tight">
-        Not a fest.<br>
-        Not a workshop.<br>
-        <span class="text-pink-400">It’s eSummit.</span>
-      </h2>
+            <!-- Content -->
+            <div class="relative z-10">
+                <p class="text-[10px] uppercase tracking-[0.4em] text-purple-400 font-bold mb-4">
+                    E-Cell IGDTUW presents
+                </p>
 
-      <p class="popup-desc text-gray-300 mb-8 text-sm leading-relaxed">
-        Two days of bold ideas, real stories, and founders who dared.
-        <br><span class="text-white/80">Limited seats • High impact</span>
-      </p>
+                <h2 class="text-3xl sm:text-4xl font-extrabold mb-6 leading-tight tracking-tight">
+                    Not a fest.<br />
+                    Not a workshop.<br />
+                    <span
+                        class="text-transparent bg-clip-text bg-gradient-to-r from-pink-400 via-purple-400 to-indigo-400">
+                        It’s eSummit.
+                    </span>
+                </h2>
 
-      <button id="enterEsummit" class="group relative w-full py-4 rounded-full 
-                     bg-gradient-to-r from-pink-500 to-purple-500 
-                     font-bold text-lg transition-all duration-300 
-                     hover:scale-[1.04] hover:shadow-[0_0_30px_rgba(236,72,153,0.6)]">
-        <span class="relative z-10">Enter eSummit →</span>
-        <span class="absolute inset-0 rounded-full bg-white/10 opacity-0 group-hover:opacity-100 transition"></span>
-      </button>
+                <p class="text-gray-400 mb-8 text-sm sm:text-base leading-relaxed font-medium">
+                    Step into a world of bold ideas and raw founder stories. Witness the convergence of technology and
+                    entrepreneurship like never before.
+                </p>
+
+                <button id="enterSummitBtn"
+                    class="group relative w-full py-5 rounded-2xl bg-gradient-to-r from-pink-600 to-purple-700 font-bold text-lg transition-all duration-300 shadow-[0_10px_40px_rgba(236,72,153,0.3)] hover:shadow-[0_15px_50px_rgba(236,72,153,0.5)] active:scale-95">
+                    <span class="relative z-10 flex items-center justify-center gap-3">
+                        Enter eSummit →
+                    </span>
+                    <span
+                        class="absolute inset-0 rounded-2xl bg-white/10 opacity-0 group-hover:opacity-100 transition-opacity"></span>
+                </button>
+
+                <div class="flex flex-col items-center mt-8">
+                    <p class="text-[10px] text-gray-500 uppercase tracking-widest font-semibold">
+                        Igniting Innovation &bull; 2025 Edition
+                    </p>
+                </div>
+            </div>
+
+            <!-- Texture and Edge Glow -->
+            <div
+                class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/carbon-fibre.png')] opacity-[0.03] pointer-events-none">
+            </div>
+            <div class="absolute -inset-px rounded-[2.5rem] border border-white/10 pointer-events-none z-0"></div>
+        </div>
     </div>
-  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
