--- a/E-Cell-Website/index.html
+++ b/E-Cell-Website/index.html
@@ -45,6 +45,7 @@
         <div class="links" id="navLinks">
           <a href="index.html" class="nav-text">About</a>
           <a href="events.html" class="nav-text">Events</a>
+          <a href="esummit.html" class="nav-text">E-Summit</a>
           <a href="blogs.html" class="nav-text">Blogs</a>
           <a href="gallery.html" class="nav-text">Gallery</a>
           <a href="updates.html" class="nav-text">Updates</a>
