mobile drawer added esummit

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <div class="drawer-panel" role="dialog" aria-label="Mobile menu">
         <button class="close" id="closeDrawer" aria-label="Close menu">Close</button>
         <a href="#about" class="nav-text dlink">About</a>
+        <a href="esummit.html" class="nav-text">ESummit</a>
         <a href="events.html" class="nav-text dlink">Events</a>
         <a href="blogs.html" class="nav-text dlink">Blogs</a>
         <a href="gallery.html" class="nav-text dlink">Gallery</a>
