--- a/esummit.html
+++ b/esummit.html
@@ -101,15 +101,15 @@
 
         <div class="hero-stats">
             <div class="stat-item">
-                <div class="stat-number">2000+</div>
+                <div class="stat-number">500+</div>
                 <div class="stat-label">Participants</div>
             </div>
-            <div class="stat-item">
+            <!-- <div class="stat-item">
                 <div class="stat-number">50+</div>
                 <div class="stat-label">Speakers</div>
-            </div>
+            </div> -->
             <div class="stat-item">
-                <div class="stat-number">₹10L</div>
+                <div class="stat-number">₹100k</div>
                 <div class="stat-label">Prize Pool</div>
             </div>
         </div>
@@ -179,7 +179,7 @@
                         from across the country.
                     </p>
                     <div class="card-footer">
-                        <span class="footer-text">2000+ Attendees</span>
+                        <span class="footer-text">500+ Attendees</span>
                         <div class="footer-arrow">→</div>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                         on cutting-edge topics.
                     </p>
                     <div class="card-footer">
-                        <span class="footer-text">20+ Sessions</span>
+                        <span class="footer-text"> Multiple Sessions</span>
                         <div class="footer-arrow">→</div>
                     </div>
                 </div>
@@ -206,15 +206,15 @@
                 <div class="stats-card">
                     <div class="stats-content">
                         <div class="stat-block">
-                            <div class="stat-big">₹10L+</div>
+                            <div class="stat-big">₹100k+</div>
                             <div class="stat-small">Total Prize Money</div>
                         </div>
                         <div class="stat-block">
-                            <div class="stat-big">100+</div>
+                            <div class="stat-big">10+</div>
                             <div class="stat-small">Startup Mentors</div>
                         </div>
                         <div class="stat-block">
-                            <div class="stat-big">30+</div>
+                            <div class="stat-big">10+</div>
                             <div class="stat-small">Partner Organizations</div>
                         </div>
                     </div>
