--- a/esummit.html
+++ b/esummit.html
@@ -245,7 +245,7 @@
         </div>
     </section>
     <!-- Competitions Section -->
-    <section id="competitions" class="competition-section">
+    <section id="competitions" class="competition-section ">
         <!-- SECTION HEADER -->
         <div class="comp-header">
             <span class="section-tag">
@@ -261,60 +261,81 @@
                 and creativity—while preparing you for the fast-evolving tech landscape.
             </p>
         </div>
-        <div class="comp-container">
-            <div class="comp-card">
-                <div class="comp-icon-circle">
-                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                        <path d="M20 5L25 15H15L20 5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                        <path d="M20 15V28" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-                        <path d="M15 28H25" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-                    </svg>
+        
+        <div class="comp-container grid grid-cols-1 md:grid-cols-2 place-items-center gap-8 mt-12 flex justify-center gap-10 items-stretch">
+            <a href="https://unstop.com/competitions/start-a-thon-a-two-stage-startup-pitching-competition-e-summit-igdtuw-e-cell-igdtuw-1621490?utm_source=ig&utm_medium=social&utm_content=link_in_bio"
+                target="_blank" rel="noopener noreferrer" class="comp-card-link">
+
+                <div class="comp-card flex flex-col h-full ">
+                    <div class="comp-icon-circle">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
+                            <path d="M20 5L25 15H15L20 5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M20 15V28" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                            <path d="M15 28H25" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                        </svg>
+                    </div>
+
+                    <h3 class="comp-title">
+                        Start-A-Thon
+                    </h3>
+                    <h2>A Two-Stage Startup Pitching Competition</h2>
+
+                    <p class="comp-desc">
+                        A flagship startup pitching competition at E-Summit IGDTUW where teams
+                        ideate, validate, and pitch innovative business ideas before founders,
+                        investors, and industry experts.
+                    </p>
+
+                    <div class="comp-meta">
+                        <span>👥 Team Size: 1–3 Members</span>
+                        <span>🌐 Mode: Online</span>
+                    </div>
+
+                    <div class="comp-bottom">
+                        <span class="highlight-text">Register on Unstop</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </div>
-                <h3 class="comp-title">Startathon</h3>
-                <p class="comp-desc">An intense startup marathon where teams brainstorm ideas, validate them with data,
-                    craft prototypes,
-                    and pitch innovative solutions for real impact.</p>
-                <div class="comp-bottom">
-                    <span class="highlight-text">Build & Pitch</span>
-                    <span class="arrow">→</span>
+
+            </a>
+
+            <a href="https://unstop.com/competitions/visionary-case-conclave-e-summit-igdtuw-igdtuw-delhi-1621527?utm_source=ig&utm_medium=social&utm_content=link_in_bio"
+                target="_blank" rel="noopener noreferrer" class="comp-card-link">
+
+                <div class="comp-card">
+                    <div class="comp-icon-circle">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
+                            <path d="M8 10H32" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                            <path d="M8 18H32" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                            <path d="M8 26H24" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                            <path d="M28 24L32 28L36 24" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </div>
+
+                    <h3 class="comp-title">
+                        Visionary Case Conclave
+                    </h3>
+
+                    <p class="comp-desc">
+                        A strategic case study competition at E-Summit IGDTUW where participants
+                        analyze real-world business challenges, propose data-driven solutions,
+                        and present their insights to industry experts.
+                    </p>
+
+                    <div class="comp-meta">
+                        <span>👥 Team Size: 1–3 Members</span>
+                        <span>🌐 Mode: Online</span>
+                    </div>
+
+                    <div class="comp-bottom">
+                        <span class="highlight-text">Register on Unstop</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </div>
-            </div>
-            <div class="comp-card">
-                <div class="comp-icon-circle">
-                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                        <rect x="10" y="10" width="20" height="20" rx="2" stroke="currentColor" stroke-width="2" />
-                        <path d="M14 16H26" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-                        <path d="M14 20H26" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-                        <path d="M14 24H22" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-                    </svg>
-                </div>
-                <h3 class="comp-title">Case Study Competition</h3>
-                <p class="comp-desc">Evaluate real business scenarios, identify root causes, design impactful
-                    strategies,
-                    and present structured solutions with confidence.</p>
-                <div class="comp-bottom">
-                    <span class="highlight-text">Real Scenarios</span>
-                    <span class="arrow">→</span>
-                </div>
-            </div>
-            <div class="comp-card">
-                <div class="comp-icon-circle">
-                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                        <circle cx="20" cy="14" r="6" stroke="currentColor" stroke-width="2" />
-                        <path d="M12 30C12 25 16 22 20 22C24 22 28 25 28 30" stroke="currentColor" stroke-width="2"
-                            stroke-linecap="round" />
-                    </svg>
-                </div>
-                <h3 class="comp-title">2 Speaker Events</h3>
-                <p class="comp-desc">Powerful speaker sessions featuring founders, CEOs, and industry leaders sharing
-                    real
-                    experiences and actionable insights.</p>
-                <div class="comp-bottom">
-                    <span class="highlight-text">Expert Insights</span>
-                    <span class="arrow">→</span>
-                </div>
-            </div>
+
+            </a>
         </div>
     </section>
 
