--- a/esummit.html
+++ b/esummit.html
@@ -114,15 +114,15 @@
 
         <div class="hero-stats">
             <div class="stat-item">
-                <div class="stat-number">2000+</div>
+                <div class="stat-number">800+</div>
                 <div class="stat-label">Participants</div>
             </div>
             <div class="stat-item">
-                <div class="stat-number">50+</div>
+                <div class="stat-number">3</div>
                 <div class="stat-label">Speakers</div>
             </div>
             <div class="stat-item">
-                <div class="stat-number">₹10L</div>
+                <div class="stat-number">₹100k</div>
                 <div class="stat-label">Prize Pool</div>
             </div>
         </div>
@@ -159,7 +159,7 @@
                         the startup ecosystem.
                     </p>
                     <div class="card-footer">
-                        <span class="footer-text">50+ Speakers</span>
+                        <span class="footer-text">3 Speakers</span>
                         <div class="footer-arrow">→</div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                         from across the country.
                     </p>
                     <div class="card-footer">
-                        <span class="footer-text">2000+ Attendees</span>
+                        <span class="footer-text">800+ Attendees</span>
                         <div class="footer-arrow">→</div>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                         on cutting-edge topics.
                     </p>
                     <div class="card-footer">
-                        <span class="footer-text">20+ Sessions</span>
+                        <span class="footer-text">5 Sessions</span>
                         <div class="footer-arrow">→</div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                 <div class="stats-card">
                     <div class="stats-content">
                         <div class="stat-block">
-                            <div class="stat-big">₹10L+</div>
+                            <div class="stat-big">₹100k+</div>
                             <div class="stat-small">Total Prize Money</div>
                         </div>
                         <div class="stat-block">
