--- a/esummit.html
+++ b/esummit.html
@@ -90,7 +90,7 @@
                 </a>
 
                 <!-- View Schedule -->
-                <a href="https://unstop.com/college-fests/e-summit-igdtuw-e-cell-igdtuw-432474" target="_blank" class="cta-link">
+                <a href="#competitions" target="_blank" class="cta-link">
                     <button class="cta-secondary">
                         <span>View Schedule</span>
                     </button>
@@ -227,11 +227,11 @@
                             <div class="stat-small">Total Prize Money</div>
                         </div>
                         <div class="stat-block">
-                            <div class="stat-big">100+</div>
-                            <div class="stat-small">Startup Mentors</div>
+                            <div class="stat-big">800+</div>
+                            <div class="stat-small">Participants</div>
                         </div>
                         <div class="stat-block">
-                            <div class="stat-big">30+</div>
+                            <div class="stat-big">10+</div>
                             <div class="stat-small">Partner Organizations</div>
                         </div>
                     </div>
@@ -401,7 +401,30 @@
                         </div>
                     </div>
                 </div>
+                <!-- Speaker 3 -->
+                <div class="speaker-card">
+                    <div class="speaker-image">
+                        <img src="images/rachit.jpeg" alt="Rachit Jain">
+                    </div>
 
+                    <div class="speaker-info">
+                        <h3 class="speaker-name">Rachit Jain</h3>
+                        <p class="speaker-role">Founder, Meri Bhakti</p>
+
+                        <button class="view-more-btn" onclick="toggleDetails(this)">
+                            View More
+                        </button>
+
+                        <div class="speaker-details">
+                            <p>
+                                Rachit Jain adds fresh ideas, strong passion, and a startup-driven mindset.
+                            </p>
+                            <p><strong>Date:</strong> 6 Feb 2026</p>
+                            <p><strong>Time:</strong> 2 PM</p>
+                            <p><strong>Venue:</strong> Auditorium</p>
+                        </div>
+                    </div>
+                </div>
                 <!-- Speaker 2 -->
                 <div class="speaker-card">
                     <div class="speaker-image">
@@ -427,30 +450,7 @@
                     </div>
                 </div>
 
-                <!-- Speaker 3 -->
-                <div class="speaker-card">
-                    <div class="speaker-image">
-                        <img src="images/rachit.jpeg" alt="Rachit Jain">
-                    </div>
-
-                    <div class="speaker-info">
-                        <h3 class="speaker-name">Rachit Jain</h3>
-                        <p class="speaker-role">Founder, Meri Bhakti</p>
-
-                        <button class="view-more-btn" onclick="toggleDetails(this)">
-                            View More
-                        </button>
-
-                        <div class="speaker-details">
-                            <p>
-                                Rachit Jain adds fresh ideas, strong passion, and a startup-driven mindset.
-                            </p>
-                            <p><strong>Date:</strong> 6 Feb 2026</p>
-                            <p><strong>Time:</strong> 2 PM</p>
-                            <p><strong>Venue:</strong> Auditorium</p>
-                        </div>
-                    </div>
-                </div>
+                
 
             </div>
         </section>
